# agentfactory

./: .env.example  .gitignore  README.md  agent_factory.py  demo_factory.py  expanded_system_prompts.py  prompt_registry.yaml  pyproject.toml  requirements.txt
.cursor/rules/: sara-agent.mdc
docs/: problemsGit.md
scripts/: run_agent.py
specs/: architect-agent.yaml  pm-agent.yaml
src/agentfactory/: __init__.py  composer.py  factory.py  models.py  registry.py  spec.py
src/agentfactory/mcp/: __init__.py  bridge.py  manager.py  server.py  transport.py
src/agentfactory/mcp/servers/: __init__.py  calculator.py  knowledge_base.py
src/agentfactory/templates/: __init__.py  expanded.py
tests/: test_factory.py  test_smoke.py  test_spec.py
