[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfactory"
version = "0.1.0"
description = "A meta-agent system: agents that create specialized agents with tools."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Christopher Hartline"},
]

dependencies = [
    "langchain-core",
    "langchain",
    "langchain-anthropic",
    "langgraph",
    "deepagents",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentfactory = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
